# jpg2bmp

./: CMakeLists.txt  README.md
include/: BitReader.h  BitWriter.h  BmpFileHeader.h  BmpImage.h  BmpInfoHeader.h  ByteHandler.h  ColorSpaceConverter.h  Dht.h  EXIFextractor.h  EXIFtag.h  IFD0tag.h  IFD1tag.h  JFIFextractor.h  JpegHeader.hpp  RgbQuad.h
src/: BitReader.cpp  BitWriter.cpp  BmpFileHeader.cpp  BmpImage.cpp  BmpInfoHeader.cpp  ByteHandler.cpp  ColorSpaceConverter.cpp  Dht.cpp  EXIFextractor.cpp  EXIFtag.cpp  IFD0tag.cpp  IFD1tag.cpp  JFIFextractor.cpp  JpegHeader.cpp  RgbQuad.cpp  main.cpp  mainDCT.cpp
